# scrappers

./: Dockerfile  docker-compose.yml  network_scrapper.py  pyproject.toml  sofascore_scrapper.py  who_scored_scrapper.py
